# antidote-rust-client

./: Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
protos/: antidote_pb.proto
src/: antidote-client.rs  antidote_pb.rs  coder.rs  lib.rs  r2d2_adapter.rs  transactions.rs
tests/: client_test.rs
