[package]
name = "arc"
version = "0.1.0"
authors = ["Yannick Wagner <ywagner@rhrk.uni-kl.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.18.1"
r2d2 = "0.8.9"
byteorder = "1.3.4"
rand = "0.8.0"
#scheduled-thread-pool = "0.2.5"