[package]
name = "antidote-rust-client"
version = "0.1.0"
authors = ["Yannick Wagner <y.w94@gmx.de>"]
edition = "2018"
repository = "https://github.com/Yannick-W/antidote-rust-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.18.1"
r2d2 = "0.8.9"
byteorder = "1.3.4"
rand = "0.8.0"
#scheduled-thread-pool = "0.2.5"